--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -34,7 +34,7 @@
   
   .about-content {
     display: flex;
-    gap: 60px;
+    gap: 15rem;
   }
   
   .about-left {
@@ -45,14 +45,20 @@
     flex: 2;
   }
   
-  .about-left p,
+  .about-left p
+  {
+    width: 28rem;
+    margin-top: 0;
+    line-height: 1.6;
+    color: #333;
+    font-size: 16px;
+  }
   .about-right p {
     margin-top: 0;
     line-height: 1.6;
     color: #333;
     font-size: 16px;
   }
-  
   .skills-container {
     margin-top: 40px;
   }
