--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -36,6 +36,7 @@
     font-size: 275px;
     color: #1B7AFF;
     text-align: center;
+    margin-top: 1.5rem;
   }
   
 
@@ -49,7 +50,12 @@
     margin-bottom: 30px;
   }
   
-
+  .hero-img {
+    position: absolute;
+    transition: transform 0.2s ease-out;
+    will-change: transform;
+  }
+  
   
 
   
